Update npm version 20.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
-  "version": "19.0.0",
+  "name": "@targetx/ckeditor5-build-classic",
+  "version": "20.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
     "ckeditor5-build",
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "^19.0.0",
+    "@ckeditor/ckeditor5-alignment": "^19.0.0",
     "@ckeditor/ckeditor5-autoformat": "^19.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^19.0.0",
     "@ckeditor/ckeditor5-block-quote": "^19.0.0",
@@ -36,7 +37,9 @@
     "@ckeditor/ckeditor5-easy-image": "^19.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^19.0.0",
     "@ckeditor/ckeditor5-essentials": "^19.0.0",
+    "@ckeditor/ckeditor5-font": "^19.0.0",
     "@ckeditor/ckeditor5-heading": "^19.0.0",
+    "@ckeditor/ckeditor5-highlight": "^19.0.0",
     "@ckeditor/ckeditor5-image": "^19.0.0",
     "@ckeditor/ckeditor5-indent": "^19.0.0",
     "@ckeditor/ckeditor5-link": "^19.0.0",
@@ -47,15 +50,17 @@
     "@ckeditor/ckeditor5-table": "^19.0.0",
     "@ckeditor/ckeditor5-typing": "^19.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^19.0.0",
+    "@targetx/ckeditor5-mention": "20.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^2.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^7.0.0",
-    "stylelint": "^11.1.1",
-    "stylelint-config-ckeditor5": "^1.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^3.1.0",
     "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-ckeditor5": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
@@ -67,10 +72,10 @@
   "author": "CKSource (http://cksource.com/)",
   "license": "GPL-2.0-or-later",
   "homepage": "https://ckeditor.com/ckeditor-5",
-  "bugs": "https://github.com/ckeditor/ckeditor5/issues",
+  "bugs": "https://github.com/targetx/fork-ckeditor5-build-classic/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5-build-classic.git"
+    "url": "https://github.com/targetx/fork-ckeditor5-build-classic.git"
   },
   "scripts": {
     "build": "webpack --mode production",
@@ -94,5 +99,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "dependencies": {}
 }
